--- a/examples/InhomogeneousPoissonProcess.qmd
+++ b/examples/InhomogeneousPoissonProcess.qmd
@@ -1,5 +1,6 @@
 ---
 title: Inhomogeneous Poisson Process
+subtitle: '[Reference](../reference/InhomogeneousPoissonProcess.qmd)'
 jupyter:
   jupytext:
     text_representation:
@@ -14,8 +15,6 @@ jupyter:
 ---
 
 _Application: software canary testing when all processes share a common multiplicative time-varying effect._
-
-Based on @lindon2022anytimevalid.
 
 Consider points are observed from one of $i \in \{1, 2\}$ Poisson point processes with intensity functions $\lambda_i(t) = \rho_i \exp(\delta_i) \lambda(t)$, with $\rho = [0.8, 0.2]$ and $\delta = [1.5, 2]$. The probability that the next point comes from process $i$ is
 
@@ -32,7 +31,7 @@ import numpy as np
 rho = np.array([0.8, 0.2])
 delta = np.array([1.5, 2])
 theta = rho * np.exp(delta) / np.sum(rho * np.exp(delta))
-size = 1500
+size = 1000
 np.random.seed(1)
 xs = np.random.multinomial(1, theta, size=size)
 print(xs)
@@ -47,10 +46,12 @@ H_1: \delta_1 - \delta_0 \neq 0  \quad (\mathbf{\theta} \neq \mathbf{\rho})
 \end{align}
 $$
 
-using a Multinomial test with $\alpha = 0.05$, $\mathbf{\theta}_0 = \mathbf{\rho}$ and contrast weights $[-1, 1]$ to estimate a confidence sequence for $\delta_1 - \delta_0$:
+using a Multinomial test with $\mathbf{\theta}_0 = \mathbf{\rho}$. To estimate a $(1 - \alpha)$ confidence sequence for $\delta_1 - \delta_0$, we may set weights $[-1, 1]$:
 
 ```{python}
 #| label: hypothesis
+#| message: false
+#| warning: false
 from savvi.multinomial import InhomogeneousPoissonProcess
 
 alpha = 0.05
@@ -63,16 +64,13 @@ For each new unit sample $n$, we run the test. If $p_n < \alpha$, we have the op
 ```{python}
 #| label: sequence
 #| warning: false
-import cvxpy as cp
-
-solver = cp.CLARABEL
-sequence = ipp.batch(xs, solver=solver)
+sequence = ipp.batch(xs)
 optional_stop = next(s for s in sequence if s.p_value <= alpha)
-vars(optional_stop)
+optional_stop
 ```
 
 ```{python}
-#| label: plot
+#| label: viz
 %config InlineBackend.figure_formats = ["svg"]
 
 import matplotlib.pyplot as plt
