--- a/reference/Multinomial.qmd
+++ b/reference/Multinomial.qmd
@@ -5,55 +5,33 @@ multinomial.Multinomial(self, alpha, theta_0, k=100)
 ```
 
 Sample ratio mismatch test from @lindon2022anytimevalid.
-See [example](../examples/Multinomial.qmd).
 
-## Attributes {.doc-section .doc-section-attributes}
+* Parent class: [`Inference`](/reference/Inference.qmd)
+* [Example](../examples/Multinomial.qmd)
 
-| Name    | Type        | Description                     |
-|---------|-------------|---------------------------------|
-| theta   | cp.Variable | Multinomial parameter.          |
-| theta_0 | np.ndarray  | Null Multinomial parameter.     |
-| alpha_0 | np.ndarray  | Prior Dirichlet parameters.     |
-| alpha   | np.ndarray  | Posterior Dirichlet parameters. |
-| counts  | np.ndarray  | Success counts.                 |
-| d       | float       | Size of theta.                  |
+## Parameters {.doc-section .doc-section-parameters}
+
+| Name    | Type       | Description                                                                             | Default    |
+|---------|------------|-----------------------------------------------------------------------------------------|------------|
+| alpha   | float      | Probability of Type I error $\alpha$.                                                   | _required_ |
+| theta_0 | np.ndarray | Null Multinomial parameters $\mathbf{\theta}_0$.                                        | _required_ |
+| k       | float      | Concentration for Dirichlet prior parameters $\mathbf{\alpha}_0 = k \mathbf{\theta}_0$. | `100`      |
+
+## Attributes
+
+| Name | Description |
+| --- | --- |
+| [alpha_0](#savvi.multinomial.Multinomial.alpha_0) | Prior Dirichlet parameters $\mathbf{\alpha}_0$. |
+| [counts](#savvi.multinomial.Multinomial.counts) | Success counts. |
+| [odds](#savvi.multinomial.Multinomial.odds) | Posterior odds. |
+| [theta](#savvi.multinomial.Multinomial.theta) | Estimate of theta $\mathbf{\hat{\theta}}$. |
+| [theta_0](#savvi.multinomial.Multinomial.theta_0) | Null Multinomial parameters $\mathbf{\theta}_0$. |
 
 ## Methods
 
 | Name | Description |
 | --- | --- |
-| [calculate_conf_int](#savvi.multinomial.Multinomial.calculate_conf_int) | Calculate confidence intervals for the parameters. |
-| [calculate_p_value](#savvi.multinomial.Multinomial.calculate_p_value) | Calculate the p-value. |
-| [update](#savvi.multinomial.Multinomial.update) | Update the model with new data. |
-| [update_odds](#savvi.multinomial.Multinomial.update_odds) | Update the odds ratio. |
-
-### calculate_conf_int { #savvi.multinomial.Multinomial.calculate_conf_int }
-
-```python
-multinomial.Multinomial.calculate_conf_int(**kwargs)
-```
-
-Calculate confidence intervals for the parameters.
-
-#### Returns {.doc-section .doc-section-returns}
-
-| Name   | Type       | Description                          |
-|--------|------------|--------------------------------------|
-|        | np.ndarray | The calculated confidence intervals. |
-
-### calculate_p_value { #savvi.multinomial.Multinomial.calculate_p_value }
-
-```python
-multinomial.Multinomial.calculate_p_value(**kwargs)
-```
-
-Calculate the p-value.
-
-#### Returns {.doc-section .doc-section-returns}
-
-| Name   | Type   | Description             |
-|--------|--------|-------------------------|
-|        | float  | The calculated p-value. |
+| [update](#savvi.multinomial.Multinomial.update) | Update the model with success counts. |
 
 ### update { #savvi.multinomial.Multinomial.update }
 
@@ -61,30 +39,10 @@ Calculate the p-value.
 multinomial.Multinomial.update(x)
 ```
 
-Update the model with new data.
+Update the model with success counts.
 
 #### Parameters {.doc-section .doc-section-parameters}
 
-| Name   | Type       | Description                   | Default    |
-|--------|------------|-------------------------------|------------|
-| x      | np.ndarray | New data to update the model. | _required_ |
-
-### update_odds { #savvi.multinomial.Multinomial.update_odds }
-
-```python
-multinomial.Multinomial.update_odds(x)
-```
-
-Update the odds ratio.
-
-#### Parameters {.doc-section .doc-section-parameters}
-
-| Name   | Type       | Description                        | Default    |
-|--------|------------|------------------------------------|------------|
-| x      | np.ndarray | New data to update the odds ratio. | _required_ |
-
-#### Returns {.doc-section .doc-section-returns}
-
-| Name   | Type   | Description             |
-|--------|--------|-------------------------|
-|        | float  | The updated odds ratio. |
+| Name   | Type       | Description     | Default    |
+|--------|------------|-----------------|------------|
+| x      | np.ndarray | Success counts. | _required_ |
